--- a/.github/workflows/e2e_tests.yml
+++ b/.github/workflows/e2e_tests.yml
@@ -25,5 +25,5 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
-          env: USERNAME={SECRET_USERNAME}
+          env: USERNAME=${{ secrets.USERNAME }},PASSWORD=${{ secrets.PASSWORD }}
           
